Added daily folder in datasets. Removed keep-timestamp option as it caused errors in obtain_data.ipynb

--- a/obtain_data.ipynb
+++ b/obtain_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "5526684c",
    "metadata": {},
    "outputs": [],
@@ -16,6 +16,8 @@
     "    args:\n",
     "        data: pandas DataFrame with \"close\" and \"volume\" columns\n",
     "        log_returns: bool, if True, the data is converted to log returns\n",
+    "        keep_high_low: bool, if True, the high and low prices are kept\n",
+    "        keep_volume: bool, if True, the volume column is kept\n",
     "    returns:\n",
     "        pandas DataFrame with \"returns\" and \"volume\" columns\n",
     "    \"\"\"\n",
@@ -123,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "b92e284d",
    "metadata": {},
    "outputs": [
@@ -258,13 +260,12 @@
     "import yfinance as yf\n",
     "import pandas as pd\n",
     "\n",
-    "df = yf.download('BTC-USD', start='2025-01-01', end='2025-01-14', interval='1h')\n",
-    "df.head()"
+    "df = yf.download('BTC-USD', start='2025-01-01', end='2025-01-14', interval='1h')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "437443e0",
    "metadata": {},
    "outputs": [
@@ -376,19 +377,21 @@
     "\n",
     "# Rearranges and renames columns to be the same as the data before\n",
     "df = df[[\"Date\", \"Open\", \"High\", \"Low\", \"Close\", \"Volume\"]]\n",
-    "df.columns = [\"timestamp\", \"open\", \"high\", \"low\", \"close\", \"volume\"]\n",
-    "df.head()"
+    "df.columns = [\"timestamp\", \"open\", \"high\", \"low\", \"close\", \"volume\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "fdc5a717",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = convert_to_returns(df, keep_volume=False, keep_high_low=False)\n",
+    "# Convert to returns and save to csv\n",
+    "\n",
     "data_name = \"hourly/ret_h_14d\"\n",
+    "\n",
+    "df = convert_to_returns(df, keep_volume=False, keep_high_low=False)\n",
     "df.to_csv(f\"dataset/cryptex/{data_name}.csv\", index=False)"
    ]
   }
